--- a/road-map-for-today-1.html
+++ b/road-map-for-today-1.html
@@ -43,9 +43,9 @@
     }
   </style>
 <link rel="stylesheet" href="style.css">
-<meta name="description" content="Lecture  Causality  A Clear Theoretical Framework  Modernisation Theory  Critique &amp; Competing Approaches  Break  Worksheet    Learning Outcomes After this week, students should be able to: Explain...">
-<meta property="og:description" content="Lecture  Causality  A Clear Theoretical Framework  Modernisation Theory  Critique &amp; Competing Approaches  Break  Worksheet    Learning Outcomes After this week, students should be able to: Explain...">
-<meta name="twitter:description" content="Lecture  Causality  A Clear Theoretical Framework  Modernisation Theory  Critique &amp; Competing Approaches  Break  Worksheet    Learning Outcomes After this week, students should be able to: Explain...">
+<meta name="description" content="Lecture  Causality  A Clear Theoretical Framework  Modernisation Theory  Critique &amp; Competing Approaches  Break  Linear Regression - Theory &amp; Application    Learning Outcomes After this week,...">
+<meta property="og:description" content="Lecture  Causality  A Clear Theoretical Framework  Modernisation Theory  Critique &amp; Competing Approaches  Break  Linear Regression - Theory &amp; Application    Learning Outcomes After this week,...">
+<meta name="twitter:description" content="Lecture  Causality  A Clear Theoretical Framework  Modernisation Theory  Critique &amp; Competing Approaches  Break  Linear Regression - Theory &amp; Application    Learning Outcomes After this week,...">
 </head>
 <body data-spy="scroll" data-target="#toc">
 
@@ -179,7 +179,7 @@ Break
 </tr>
 <!-- Worksheet --><tr>
 <td style="border: none !important; border-bottom: 3px double currentColor !important; padding: 8px;">
-Worksheet
+Linear Regression - Theory &amp; Application
 </td>
 </tr>
 </tbody></table></div>
