--- a/road-map-for-today-2.html
+++ b/road-map-for-today-2.html
@@ -43,9 +43,9 @@
     }
   </style>
 <link rel="stylesheet" href="style.css">
-<meta name="description" content="Lecture  Assessment &amp; Research Design  Formative Essay  Democracy  Break  Worksheet    Learning Outcomes After this week, students should be able to: Apply the tasks of conceptualisation and...">
-<meta property="og:description" content="Lecture  Assessment &amp; Research Design  Formative Essay  Democracy  Break  Worksheet    Learning Outcomes After this week, students should be able to: Apply the tasks of conceptualisation and...">
-<meta name="twitter:description" content="Lecture  Assessment &amp; Research Design  Formative Essay  Democracy  Break  Worksheet    Learning Outcomes After this week, students should be able to: Apply the tasks of conceptualisation and...">
+<meta name="description" content="Lecture  Assessment &amp; Research Design  Formative Essay  Democracy  Break  Probit - Theory &amp; Application    Learning Outcomes After this week, students should be able to: Apply the tasks of...">
+<meta property="og:description" content="Lecture  Assessment &amp; Research Design  Formative Essay  Democracy  Break  Probit - Theory &amp; Application    Learning Outcomes After this week, students should be able to: Apply the tasks of...">
+<meta name="twitter:description" content="Lecture  Assessment &amp; Research Design  Formative Essay  Democracy  Break  Probit - Theory &amp; Application    Learning Outcomes After this week, students should be able to: Apply the tasks of...">
 </head>
 <body data-spy="scroll" data-target="#toc">
 
@@ -174,7 +174,7 @@ Break
 </tr>
 <!-- Worksheet --><tr>
 <td style="border: none !important; border-bottom: 3px double currentColor !important; padding: 8px;">
-Worksheet
+Probit - Theory &amp; Application
 </td>
 </tr>
 </tbody></table></div>
