--- a/road-map-for-today-5.html
+++ b/road-map-for-today-5.html
@@ -43,9 +43,9 @@
     }
   </style>
 <link rel="stylesheet" href="style.css">
-<meta name="description" content="The Formative  Lecture  Time Series  Markov Transition Models  Conditional Probabilities  Democratic Emergence  Democratic Survival  Model Fit  Break  Worksheet    Learning Outcomes After this...">
-<meta property="og:description" content="The Formative  Lecture  Time Series  Markov Transition Models  Conditional Probabilities  Democratic Emergence  Democratic Survival  Model Fit  Break  Worksheet    Learning Outcomes After this...">
-<meta name="twitter:description" content="The Formative  Lecture  Time Series  Markov Transition Models  Conditional Probabilities  Democratic Emergence  Democratic Survival  Model Fit  Break  Worksheet    Learning Outcomes After this...">
+<meta name="description" content="The Formative - General Feedback  Lecture  Time Series  Markov Transition Models  Conditional Probabilities  Democratic Emergence  Democratic Survival  Model Fit  Break  Markov-Transition Models...">
+<meta property="og:description" content="The Formative - General Feedback  Lecture  Time Series  Markov Transition Models  Conditional Probabilities  Democratic Emergence  Democratic Survival  Model Fit  Break  Markov-Transition Models...">
+<meta name="twitter:description" content="The Formative - General Feedback  Lecture  Time Series  Markov Transition Models  Conditional Probabilities  Democratic Emergence  Democratic Survival  Model Fit  Break  Markov-Transition Models...">
 </head>
 <body data-spy="scroll" data-target="#toc">
 
@@ -149,7 +149,7 @@
 <div class="inline-table"><table style="border-collapse: collapse; width: 60%; margin-left: auto; margin-right: auto; table-layout: fixed;" class="table table-sm"><tbody>
 <!-- The Formative --><tr>
 <td style="border-top: 3px double currentColor !important; border-bottom: none !important; font-weight: normal; padding: 8px;">
-The Formative
+The Formative - General Feedback
 </td>
 </tr>
 <!-- Lecture heading --><tr>
@@ -194,7 +194,7 @@ Break
 </tr>
 <!-- Worksheet --><tr>
 <td style="border: none !important; border-bottom: 3px double currentColor !important; padding: 8px;">
-Worksheet
+Markov-Transition Models in R
 </td>
 </tr>
 </tbody></table></div>
