--- a/road-map-for-today-6.html
+++ b/road-map-for-today-6.html
@@ -43,9 +43,9 @@
     }
   </style>
 <link rel="stylesheet" href="style.css">
-<meta name="description" content="The Sample Essay  Lecture  Endogenous versus Exogenous Democratisation  Empirical Evidence  Break  Last Week’s Worksheet  Summative Assessment – Group Discussion    Learning Outcomes After this...">
-<meta property="og:description" content="The Sample Essay  Lecture  Endogenous versus Exogenous Democratisation  Empirical Evidence  Break  Last Week’s Worksheet  Summative Assessment – Group Discussion    Learning Outcomes After this...">
-<meta name="twitter:description" content="The Sample Essay  Lecture  Endogenous versus Exogenous Democratisation  Empirical Evidence  Break  Last Week’s Worksheet  Summative Assessment – Group Discussion    Learning Outcomes After this...">
+<meta name="description" content="Discussion: The Sample Essay  Lecture  Endogenous versus Exogenous Democratisation  Empirical Evidence  Break  Last Week’s Worksheet  Group Discussion: The Summative Assessment    Learning...">
+<meta property="og:description" content="Discussion: The Sample Essay  Lecture  Endogenous versus Exogenous Democratisation  Empirical Evidence  Break  Last Week’s Worksheet  Group Discussion: The Summative Assessment    Learning...">
+<meta name="twitter:description" content="Discussion: The Sample Essay  Lecture  Endogenous versus Exogenous Democratisation  Empirical Evidence  Break  Last Week’s Worksheet  Group Discussion: The Summative Assessment    Learning...">
 </head>
 <body data-spy="scroll" data-target="#toc">
 
@@ -149,7 +149,7 @@
 <div class="inline-table"><table style="border-collapse: collapse; width: 60%; margin-left: auto; margin-right: auto; table-layout: fixed;" class="table table-sm"><tbody>
 <!-- The Sample Essay --><tr>
 <td style="border-top: 3px double currentColor !important; border-bottom: none !important; padding: 8px;">
-The Sample Essay
+Discussion: The Sample Essay
 </td>
 </tr>
 <!-- Lecture heading --><tr>
@@ -179,7 +179,7 @@ Last Week’s Worksheet
 </tr>
 <tr>
 <td style="border: none !important; border-bottom: 3px double currentColor !important; padding: 8px;">
-Summative Assessment – Group Discussion
+Group Discussion: The Summative Assessment
 </td>
 </tr>
 </tbody></table></div>
