--- a/road-map-for-today-7.html
+++ b/road-map-for-today-7.html
@@ -43,9 +43,9 @@
     }
   </style>
 <link rel="stylesheet" href="style.css">
-<meta name="description" content="Lecture  Housekeeping  Autocracies  The Status Quo  Startegies for Survival  What does it matter?  Assessment Guidelines  Break  Your Models    Learning Outcomes After this week, students should...">
-<meta property="og:description" content="Lecture  Housekeeping  Autocracies  The Status Quo  Startegies for Survival  What does it matter?  Assessment Guidelines  Break  Your Models    Learning Outcomes After this week, students should...">
-<meta name="twitter:description" content="Lecture  Housekeeping  Autocracies  The Status Quo  Startegies for Survival  What does it matter?  Assessment Guidelines  Break  Your Models    Learning Outcomes After this week, students should...">
+<meta name="description" content="Lecture  Housekeeping  Autocracies  The Status Quo  Startegies for Survival  What does it matter?  Assessment Guidelines  Break  Discussion: Your Models    Learning Outcomes After this week,...">
+<meta property="og:description" content="Lecture  Housekeeping  Autocracies  The Status Quo  Startegies for Survival  What does it matter?  Assessment Guidelines  Break  Discussion: Your Models    Learning Outcomes After this week,...">
+<meta name="twitter:description" content="Lecture  Housekeeping  Autocracies  The Status Quo  Startegies for Survival  What does it matter?  Assessment Guidelines  Break  Discussion: Your Models    Learning Outcomes After this week,...">
 </head>
 <body data-spy="scroll" data-target="#toc">
 
@@ -189,7 +189,7 @@ Break
 </tr>
 <!-- Your Models --><tr>
 <td style="border: none !important; border-bottom: 3px double currentColor !important; padding: 8px;">
-Your Models
+Discussion: Your Models
 </td>
 </tr>
 </tbody></table></div>
