--- a/road-map-for-today-8.html
+++ b/road-map-for-today-8.html
@@ -43,9 +43,9 @@
     }
   </style>
 <link rel="stylesheet" href="style.css">
-<meta name="description" content="Democratisation by Region  Break  Your Questions    Learning Outcomes After this week, students should be able to: Understand and evaluate commonly discussed factors which inhibit the...">
-<meta property="og:description" content="Democratisation by Region  Break  Your Questions    Learning Outcomes After this week, students should be able to: Understand and evaluate commonly discussed factors which inhibit the...">
-<meta name="twitter:description" content="Democratisation by Region  Break  Your Questions    Learning Outcomes After this week, students should be able to: Understand and evaluate commonly discussed factors which inhibit the...">
+<meta name="description" content="Student Presentations: Democratisation by Region  Break  Discussion: Your Questions  Concluding Remarks    Learning Outcomes After this week, students should be able to: Understand and evaluate...">
+<meta property="og:description" content="Student Presentations: Democratisation by Region  Break  Discussion: Your Questions  Concluding Remarks    Learning Outcomes After this week, students should be able to: Understand and evaluate...">
+<meta name="twitter:description" content="Student Presentations: Democratisation by Region  Break  Discussion: Your Questions  Concluding Remarks    Learning Outcomes After this week, students should be able to: Understand and evaluate...">
 </head>
 <body data-spy="scroll" data-target="#toc">
 
@@ -149,7 +149,7 @@
 <div class="inline-table"><table style="border-collapse: collapse; width: 60%; margin-left: auto; margin-right: auto; table-layout: fixed;" class="table table-sm"><tbody>
 <!-- Democratisation by Region --><tr>
 <td style="border-top: 3px double currentColor !important; border-bottom: none !important; font-weight: normal; padding: 8px;">
-Democratisation by Region
+Student Presentations: Democratisation by Region
 </td>
 </tr>
 <!-- Break (dashed lines) --><tr>
@@ -158,8 +158,13 @@ Break
 </td>
 </tr>
 <!-- Your Questions --><tr>
+<td style="border: none !important; padding: 8px;">
+Discussion: Your Questions
+</td>
+</tr>
+<!-- Concluding Remarks --><tr>
 <td style="border: none !important; border-bottom: 3px double currentColor !important; padding: 8px;">
-Your Questions
+Concluding Remarks
 </td>
 </tr>
 </tbody></table></div>
