--- a/road-map-for-today.html
+++ b/road-map-for-today.html
@@ -43,9 +43,9 @@
     }
   </style>
 <link rel="stylesheet" href="style.css">
-<meta name="description" content="Introductions  Module Outline  Assessment  Break  Lecture  What is Comparative Politics?  The Comparative Method  The Stages of a Research Project    Learning Outcomes After this week, students...">
-<meta property="og:description" content="Introductions  Module Outline  Assessment  Break  Lecture  What is Comparative Politics?  The Comparative Method  The Stages of a Research Project    Learning Outcomes After this week, students...">
-<meta name="twitter:description" content="Introductions  Module Outline  Assessment  Break  Lecture  What is Comparative Politics?  The Comparative Method  The Stages of a Research Project    Learning Outcomes After this week, students...">
+<meta name="description" content="Introductions  Lecture  Module Outline  Assessment  What is Comparative Politics?  The Comparative Method  The Stages of a Research Project  Break  Introduction to R    Learning Outcomes After...">
+<meta property="og:description" content="Introductions  Lecture  Module Outline  Assessment  What is Comparative Politics?  The Comparative Method  The Stages of a Research Project  Break  Introduction to R    Learning Outcomes After...">
+<meta name="twitter:description" content="Introductions  Lecture  Module Outline  Assessment  What is Comparative Politics?  The Comparative Method  The Stages of a Research Project  Break  Introduction to R    Learning Outcomes After...">
 </head>
 <body data-spy="scroll" data-target="#toc">
 
@@ -152,27 +152,22 @@
 Introductions
 </td>
 </tr>
-<tr>
-<td style="border: none !important; padding: 8px;">
-Module Outline
-</td>
-</tr>
-<tr>
-<td style="border: none !important; padding: 8px;">
-Assessment
-</td>
-</tr>
-<!-- Break --><tr>
-<td style="border-top: 1px dashed currentColor !important; border-bottom: 1px dashed currentColor !important; padding: 8px;">
-Break
-</td>
-</tr>
 <!-- Lecture heading --><tr>
 <td style="border: none !important; padding: 8px;">
 Lecture
 </td>
 </tr>
 <!-- Indented subpoints --><tr>
+<td style="border: none !important; padding: 8px 8px 8px 24px;">
+Module Outline
+</td>
+</tr>
+<tr>
+<td style="border: none !important; padding: 8px 8px 8px 24px;">
+Assessment
+</td>
+</tr>
+<tr>
 <td style="border: none !important; padding: 8px 8px 8px 24px;">
 What is Comparative Politics?
 </td>
@@ -183,8 +178,18 @@ The Comparative Method
 </td>
 </tr>
 <tr>
-<td style="border: none !important; border-bottom: 3px double currentColor !important; padding: 8px 8px 8px 24px;">
+<td style="border: none !important; padding: 8px 8px 8px 24px;">
 The Stages of a Research Project
+</td>
+</tr>
+<!-- Break --><tr>
+<td style="border-top: 1px dashed currentColor !important; border-bottom: 1px dashed currentColor !important; padding: 8px;">
+Break
+</td>
+</tr>
+<tr>
+<td style="border: none !important; border-bottom: 3px double currentColor !important; padding: 8px;">
+Introduction to R
 </td>
 </tr>
 </tbody></table></div>
