--- a/glossary.html
+++ b/glossary.html
@@ -129,8 +129,8 @@
 <li><a class="" href="assessment-template.html">Assessment Template</a></li>
 <li class="book-part">Downloads</li>
 <li><a class="" href="downloads.html">Downloads</a></li>
-<li class="book-part">Glossary</li>
-<li><a class="" href="glossary-6.html">Glossary</a></li>
+<li class="book-part">Full Glossary</li>
+<li><a class="" href="full-glossary.html">Full Glossary</a></li>
 <li class="book-part">List of References</li>
 <li><a class="" href="list-of-references-1.html">List of References</a></li>
 </ul>
