--- a/list-of-references-1.html
+++ b/list-of-references-1.html
@@ -129,8 +129,8 @@
 <li><a class="" href="assessment-template.html">Assessment Template</a></li>
 <li class="book-part">Downloads</li>
 <li><a class="" href="downloads.html">Downloads</a></li>
-<li class="book-part">Glossary</li>
-<li><a class="" href="glossary-6.html">Glossary</a></li>
+<li class="book-part">Full Glossary</li>
+<li><a class="" href="full-glossary.html">Full Glossary</a></li>
 <li class="book-part">List of References</li>
 <li><a class="active" href="list-of-references-1.html">List of References</a></li>
 </ul>
@@ -243,7 +243,7 @@ The World Bank. (n.d.). <em><span>World Development Indicators</span></em>. <a h
     });
   });
 </script><div class="chapter-nav">
-<div class="prev"><a href="glossary-6.html">Glossary</a></div>
+<div class="prev"><a href="full-glossary.html">Full Glossary</a></div>
 <div class="empty"></div>
 </div></main><div class="col-md-3 col-lg-2 d-none d-md-block sidebar sidebar-chapter">
     <nav id="toc" data-toggle="toc" aria-label="On this page"><h2>On this page</h2>
