--- a/model-building.html
+++ b/model-building.html
@@ -129,8 +129,8 @@
 <li><a class="" href="assessment-template.html">Assessment Template</a></li>
 <li class="book-part">Downloads</li>
 <li><a class="" href="downloads.html">Downloads</a></li>
-<li class="book-part">Glossary</li>
-<li><a class="" href="glossary-6.html">Glossary</a></li>
+<li class="book-part">Full Glossary</li>
+<li><a class="" href="full-glossary.html">Full Glossary</a></li>
 <li class="book-part">List of References</li>
 <li><a class="" href="list-of-references-1.html">List of References</a></li>
 </ul>
@@ -173,8 +173,8 @@
 
     <script>
 
-      function styleCell_7r8c7x3m3y0j84salxau(i, j, css_id) {
-          var table = document.getElementById("tinytable_7r8c7x3m3y0j84salxau");
+      function styleCell_toakct7bwnd8iicj7z0b(i, j, css_id) {
+          var table = document.getElementById("tinytable_toakct7bwnd8iicj7z0b");
           var cell = table.rows[i]?.cells[j];  // Safe navigation to avoid errors
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -184,7 +184,7 @@
           }
       }
       function insertSpanRow(i, colspan, content) {
-        var table = document.getElementById('tinytable_7r8c7x3m3y0j84salxau');
+        var table = document.getElementById('tinytable_toakct7bwnd8iicj7z0b');
         var newRow = table.insertRow(i);
         var newCell = newRow.insertCell(0);
         newCell.setAttribute("colspan", colspan);
@@ -192,8 +192,8 @@
         // this may be unsafe, but innerText does not interpret <br>
         newCell.innerHTML = content;
       }
-      function spanCell_7r8c7x3m3y0j84salxau(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_7r8c7x3m3y0j84salxau");
+      function spanCell_toakct7bwnd8iicj7z0b(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_toakct7bwnd8iicj7z0b");
         const targetRow = table.rows[i];
         const targetCell = targetRow.cells[j];
         for (let r = 0; r < rowspan; r++) {
@@ -223,38 +223,38 @@
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: 0, j: 2 }, { i: 0, j: 3 },  ], css_id: 'tinytable_css_t3bhic8h0kj8frappbto',}, 
-          { positions: [ { i: 7, j: 1 }, { i: 7, j: 2 }, { i: 7, j: 3 },  ], css_id: 'tinytable_css_6k0v9ybgn446civ5j0l0',}, 
-          { positions: [ { i: 2, j: 1 }, { i: 3, j: 1 }, { i: 5, j: 1 }, { i: 6, j: 1 }, { i: 3, j: 2 }, { i: 5, j: 2 }, { i: 2, j: 2 }, { i: 3, j: 3 }, { i: 4, j: 1 }, { i: 5, j: 3 }, { i: 6, j: 2 }, { i: 4, j: 2 }, { i: 2, j: 3 }, { i: 4, j: 3 }, { i: 6, j: 3 },  ], css_id: 'tinytable_css_jmgdsyujt2yfnfkzr8w6',}, 
-          { positions: [ { i: 0, j: 1 },  ], css_id: 'tinytable_css_6z7m1cswp07k1x7mz3jl',}, 
-          { positions: [ { i: 1, j: 1 }, { i: 1, j: 2 }, { i: 1, j: 3 },  ], css_id: 'tinytable_css_fqxnu21itdao81cut37e',}, 
-          { positions: [ { i: 7, j: 0 },  ], css_id: 'tinytable_css_vj3li8wtqfd41o4plhok',}, 
-          { positions: [ { i: 2, j: 0 }, { i: 3, j: 0 }, { i: 4, j: 0 }, { i: 5, j: 0 }, { i: 6, j: 0 },  ], css_id: 'tinytable_css_n21vosnzzlgzotr9746u',}, 
-          { positions: [ { i: 0, j: 0 },  ], css_id: 'tinytable_css_qm3xdfmb14ku897ne7n4',}, 
-          { positions: [ { i: 1, j: 0 },  ], css_id: 'tinytable_css_n17cuozzimlipftpjals',}, 
+          { positions: [ { i: 0, j: 2 }, { i: 0, j: 3 },  ], css_id: 'tinytable_css_jv3uaw1fx3lxy4tqf61k',}, 
+          { positions: [ { i: 7, j: 1 }, { i: 7, j: 2 }, { i: 7, j: 3 },  ], css_id: 'tinytable_css_5pxnxwbo2tf67exm2wfw',}, 
+          { positions: [ { i: 2, j: 1 }, { i: 3, j: 1 }, { i: 5, j: 1 }, { i: 6, j: 1 }, { i: 3, j: 2 }, { i: 5, j: 2 }, { i: 2, j: 2 }, { i: 3, j: 3 }, { i: 4, j: 1 }, { i: 5, j: 3 }, { i: 6, j: 2 }, { i: 4, j: 2 }, { i: 2, j: 3 }, { i: 4, j: 3 }, { i: 6, j: 3 },  ], css_id: 'tinytable_css_4gxf7x23mlmmfbhtl5ml',}, 
+          { positions: [ { i: 0, j: 1 },  ], css_id: 'tinytable_css_85th96v113ha5rkxmg8x',}, 
+          { positions: [ { i: 1, j: 1 }, { i: 1, j: 2 }, { i: 1, j: 3 },  ], css_id: 'tinytable_css_mjvtmobozqijxjpoaioz',}, 
+          { positions: [ { i: 7, j: 0 },  ], css_id: 'tinytable_css_80ghjsc6oq5orpdu0pw7',}, 
+          { positions: [ { i: 2, j: 0 }, { i: 3, j: 0 }, { i: 4, j: 0 }, { i: 5, j: 0 }, { i: 6, j: 0 },  ], css_id: 'tinytable_css_tzejantna8onmky881ow',}, 
+          { positions: [ { i: 0, j: 0 },  ], css_id: 'tinytable_css_kwxey2l3x2v7w6a0imv1',}, 
+          { positions: [ { i: 1, j: 0 },  ], css_id: 'tinytable_css_sp5k2vc21ahl7ina519z',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_7r8c7x3m3y0j84salxau(cell.i, cell.j, group.css_id);
+                  styleCell_toakct7bwnd8iicj7z0b(cell.i, cell.j, group.css_id);
               });
           });
       });
     </script><style>
       /* tinytable css entries after */
-      .table td.tinytable_css_t3bhic8h0kj8frappbto, .table th.tinytable_css_t3bhic8h0kj8frappbto { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_6k0v9ybgn446civ5j0l0, .table th.tinytable_css_6k0v9ybgn446civ5j0l0 { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_jmgdsyujt2yfnfkzr8w6, .table th.tinytable_css_jmgdsyujt2yfnfkzr8w6 { text-align: center; }
-      .table td.tinytable_css_6z7m1cswp07k1x7mz3jl, .table th.tinytable_css_6z7m1cswp07k1x7mz3jl { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_fqxnu21itdao81cut37e, .table th.tinytable_css_fqxnu21itdao81cut37e { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_vj3li8wtqfd41o4plhok, .table th.tinytable_css_vj3li8wtqfd41o4plhok { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_n21vosnzzlgzotr9746u, .table th.tinytable_css_n21vosnzzlgzotr9746u { text-align: left; }
-      .table td.tinytable_css_qm3xdfmb14ku897ne7n4, .table th.tinytable_css_qm3xdfmb14ku897ne7n4 { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_n17cuozzimlipftpjals, .table th.tinytable_css_n17cuozzimlipftpjals { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_jv3uaw1fx3lxy4tqf61k, .table th.tinytable_css_jv3uaw1fx3lxy4tqf61k { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_5pxnxwbo2tf67exm2wfw, .table th.tinytable_css_5pxnxwbo2tf67exm2wfw { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_4gxf7x23mlmmfbhtl5ml, .table th.tinytable_css_4gxf7x23mlmmfbhtl5ml { text-align: center; }
+      .table td.tinytable_css_85th96v113ha5rkxmg8x, .table th.tinytable_css_85th96v113ha5rkxmg8x { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_mjvtmobozqijxjpoaioz, .table th.tinytable_css_mjvtmobozqijxjpoaioz { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_80ghjsc6oq5orpdu0pw7, .table th.tinytable_css_80ghjsc6oq5orpdu0pw7 { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_tzejantna8onmky881ow, .table th.tinytable_css_tzejantna8onmky881ow { text-align: left; }
+      .table td.tinytable_css_kwxey2l3x2v7w6a0imv1, .table th.tinytable_css_kwxey2l3x2v7w6a0imv1 { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_sp5k2vc21ahl7ina519z, .table th.tinytable_css_sp5k2vc21ahl7ina519z { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
 <div class="container">
-      <div class="inline-table"><table class="table table-borderless" id="tinytable_7r8c7x3m3y0j84salxau" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <div class="inline-table"><table class="table table-borderless" id="tinytable_toakct7bwnd8iicj7z0b" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
 <thead>
 <tr>
 <th scope="col" align="center" colspan="1"> </th>
