--- a/probit-application.html
+++ b/probit-application.html
@@ -129,8 +129,8 @@
 <li><a class="" href="assessment-template.html">Assessment Template</a></li>
 <li class="book-part">Downloads</li>
 <li><a class="" href="downloads.html">Downloads</a></li>
-<li class="book-part">Glossary</li>
-<li><a class="" href="glossary-6.html">Glossary</a></li>
+<li class="book-part">Full Glossary</li>
+<li><a class="" href="full-glossary.html">Full Glossary</a></li>
 <li class="book-part">List of References</li>
 <li><a class="" href="list-of-references-1.html">List of References</a></li>
 </ul>
@@ -333,8 +333,8 @@ Number of Fisher Scoring iterations: 5</code></pre>
 
     <script>
 
-      function styleCell_wowrd6kqrms8b3fk26xk(i, j, css_id) {
-          var table = document.getElementById("tinytable_wowrd6kqrms8b3fk26xk");
+      function styleCell_4zv80ru8dyou239wenrm(i, j, css_id) {
+          var table = document.getElementById("tinytable_4zv80ru8dyou239wenrm");
           var cell = table.rows[i]?.cells[j];  // Safe navigation to avoid errors
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -344,7 +344,7 @@ Number of Fisher Scoring iterations: 5</code></pre>
           }
       }
       function insertSpanRow(i, colspan, content) {
-        var table = document.getElementById('tinytable_wowrd6kqrms8b3fk26xk');
+        var table = document.getElementById('tinytable_4zv80ru8dyou239wenrm');
         var newRow = table.insertRow(i);
         var newCell = newRow.insertCell(0);
         newCell.setAttribute("colspan", colspan);
@@ -352,8 +352,8 @@ Number of Fisher Scoring iterations: 5</code></pre>
         // this may be unsafe, but innerText does not interpret <br>
         newCell.innerHTML = content;
       }
-      function spanCell_wowrd6kqrms8b3fk26xk(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_wowrd6kqrms8b3fk26xk");
+      function spanCell_4zv80ru8dyou239wenrm(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_4zv80ru8dyou239wenrm");
         const targetRow = table.rows[i];
         const targetCell = targetRow.cells[j];
         for (let r = 0; r < rowspan; r++) {
@@ -383,36 +383,36 @@ Number of Fisher Scoring iterations: 5</code></pre>
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: 5, j: 1 },  ], css_id: 'tinytable_css_zzdc5hlcvl4s22pjzdxt',}, 
-          { positions: [ { i: 2, j: 1 }, { i: 3, j: 1 }, { i: 4, j: 1 },  ], css_id: 'tinytable_css_xv7e0ojgqa8hi2vxp7yl',}, 
-          { positions: [ { i: 0, j: 1 },  ], css_id: 'tinytable_css_gnrsds8w3agnmynxki7l',}, 
-          { positions: [ { i: 1, j: 1 },  ], css_id: 'tinytable_css_s9fkmo3dxa8wfn2gw3tv',}, 
-          { positions: [ { i: 5, j: 0 },  ], css_id: 'tinytable_css_mye2wme5yh36xedugusa',}, 
-          { positions: [ { i: 2, j: 0 }, { i: 3, j: 0 }, { i: 4, j: 0 },  ], css_id: 'tinytable_css_b8qgsejw1l3gcl9v8xuc',}, 
-          { positions: [ { i: 0, j: 0 },  ], css_id: 'tinytable_css_b67eeop20jugq37lim3h',}, 
-          { positions: [ { i: 1, j: 0 },  ], css_id: 'tinytable_css_lhmwxufyud2k8njzdmnw',}, 
+          { positions: [ { i: 5, j: 1 },  ], css_id: 'tinytable_css_o1zufvu0zo9te9zj3gla',}, 
+          { positions: [ { i: 2, j: 1 }, { i: 3, j: 1 }, { i: 4, j: 1 },  ], css_id: 'tinytable_css_g0kjzojon78842khp2qw',}, 
+          { positions: [ { i: 0, j: 1 },  ], css_id: 'tinytable_css_bubtgvzoczrvaq0av421',}, 
+          { positions: [ { i: 1, j: 1 },  ], css_id: 'tinytable_css_ydc6ugahy8nrofcy6p3o',}, 
+          { positions: [ { i: 5, j: 0 },  ], css_id: 'tinytable_css_m8wknili33fqcc4dwdph',}, 
+          { positions: [ { i: 2, j: 0 }, { i: 3, j: 0 }, { i: 4, j: 0 },  ], css_id: 'tinytable_css_obca71tqvvii6a3og9ka',}, 
+          { positions: [ { i: 0, j: 0 },  ], css_id: 'tinytable_css_fml08umfrkt7gpfin0s4',}, 
+          { positions: [ { i: 1, j: 0 },  ], css_id: 'tinytable_css_l93peqe89qriomsme3dv',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_wowrd6kqrms8b3fk26xk(cell.i, cell.j, group.css_id);
+                  styleCell_4zv80ru8dyou239wenrm(cell.i, cell.j, group.css_id);
               });
           });
       });
     </script><style>
       /* tinytable css entries after */
-      .table td.tinytable_css_zzdc5hlcvl4s22pjzdxt, .table th.tinytable_css_zzdc5hlcvl4s22pjzdxt { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_xv7e0ojgqa8hi2vxp7yl, .table th.tinytable_css_xv7e0ojgqa8hi2vxp7yl { text-align: center; }
-      .table td.tinytable_css_gnrsds8w3agnmynxki7l, .table th.tinytable_css_gnrsds8w3agnmynxki7l { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_s9fkmo3dxa8wfn2gw3tv, .table th.tinytable_css_s9fkmo3dxa8wfn2gw3tv { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_mye2wme5yh36xedugusa, .table th.tinytable_css_mye2wme5yh36xedugusa { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_b8qgsejw1l3gcl9v8xuc, .table th.tinytable_css_b8qgsejw1l3gcl9v8xuc { text-align: left; }
-      .table td.tinytable_css_b67eeop20jugq37lim3h, .table th.tinytable_css_b67eeop20jugq37lim3h { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_lhmwxufyud2k8njzdmnw, .table th.tinytable_css_lhmwxufyud2k8njzdmnw { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_o1zufvu0zo9te9zj3gla, .table th.tinytable_css_o1zufvu0zo9te9zj3gla { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_g0kjzojon78842khp2qw, .table th.tinytable_css_g0kjzojon78842khp2qw { text-align: center; }
+      .table td.tinytable_css_bubtgvzoczrvaq0av421, .table th.tinytable_css_bubtgvzoczrvaq0av421 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_ydc6ugahy8nrofcy6p3o, .table th.tinytable_css_ydc6ugahy8nrofcy6p3o { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_m8wknili33fqcc4dwdph, .table th.tinytable_css_m8wknili33fqcc4dwdph { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_obca71tqvvii6a3og9ka, .table th.tinytable_css_obca71tqvvii6a3og9ka { text-align: left; }
+      .table td.tinytable_css_fml08umfrkt7gpfin0s4, .table th.tinytable_css_fml08umfrkt7gpfin0s4 { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_l93peqe89qriomsme3dv, .table th.tinytable_css_l93peqe89qriomsme3dv { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
 <div class="container">
-      <div class="inline-table"><table class="table table-borderless" id="tinytable_wowrd6kqrms8b3fk26xk" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <div class="inline-table"><table class="table table-borderless" id="tinytable_4zv80ru8dyou239wenrm" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
 <thead>
 <tr>
 <th scope="col" align="center" colspan="1"> </th>
@@ -503,8 +503,8 @@ Number of Fisher Scoring iterations: 5</code></pre>
 
     <script>
 
-      function styleCell_dbur7oh93zra02ty409h(i, j, css_id) {
-          var table = document.getElementById("tinytable_dbur7oh93zra02ty409h");
+      function styleCell_pm0wle6xhenreuie7jep(i, j, css_id) {
+          var table = document.getElementById("tinytable_pm0wle6xhenreuie7jep");
           var cell = table.rows[i]?.cells[j];  // Safe navigation to avoid errors
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -514,7 +514,7 @@ Number of Fisher Scoring iterations: 5</code></pre>
           }
       }
       function insertSpanRow(i, colspan, content) {
-        var table = document.getElementById('tinytable_dbur7oh93zra02ty409h');
+        var table = document.getElementById('tinytable_pm0wle6xhenreuie7jep');
         var newRow = table.insertRow(i);
         var newCell = newRow.insertCell(0);
         newCell.setAttribute("colspan", colspan);
@@ -522,8 +522,8 @@ Number of Fisher Scoring iterations: 5</code></pre>
         // this may be unsafe, but innerText does not interpret <br>
         newCell.innerHTML = content;
       }
-      function spanCell_dbur7oh93zra02ty409h(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_dbur7oh93zra02ty409h");
+      function spanCell_pm0wle6xhenreuie7jep(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_pm0wle6xhenreuie7jep");
         const targetRow = table.rows[i];
         const targetCell = targetRow.cells[j];
         for (let r = 0; r < rowspan; r++) {
@@ -553,36 +553,36 @@ Number of Fisher Scoring iterations: 5</code></pre>
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: 5, j: 1 },  ], css_id: 'tinytable_css_ugb6e1ctyon1dtctlww8',}, 
-          { positions: [ { i: 2, j: 1 }, { i: 3, j: 1 }, { i: 4, j: 1 },  ], css_id: 'tinytable_css_ru5lkdnvpb6k0noriuyu',}, 
-          { positions: [ { i: 0, j: 1 },  ], css_id: 'tinytable_css_6g8usgj7r9dcdugo7uhp',}, 
-          { positions: [ { i: 1, j: 1 },  ], css_id: 'tinytable_css_tkxqraiew9kv2h6lohub',}, 
-          { positions: [ { i: 5, j: 0 },  ], css_id: 'tinytable_css_sfmoj3nv37e140mxcrfa',}, 
-          { positions: [ { i: 2, j: 0 }, { i: 3, j: 0 }, { i: 4, j: 0 },  ], css_id: 'tinytable_css_ytl18wvj5fnuev1fvyx2',}, 
-          { positions: [ { i: 0, j: 0 },  ], css_id: 'tinytable_css_kl6c6srvpph02nd9jiry',}, 
-          { positions: [ { i: 1, j: 0 },  ], css_id: 'tinytable_css_mjodf2dnl1k3v0ruk8kt',}, 
+          { positions: [ { i: 5, j: 1 },  ], css_id: 'tinytable_css_xeqsavepxq1h0gpsg8ov',}, 
+          { positions: [ { i: 2, j: 1 }, { i: 3, j: 1 }, { i: 4, j: 1 },  ], css_id: 'tinytable_css_dzaym3y1t3plc0te4v55',}, 
+          { positions: [ { i: 0, j: 1 },  ], css_id: 'tinytable_css_rdmshs83zq1bvyr2702v',}, 
+          { positions: [ { i: 1, j: 1 },  ], css_id: 'tinytable_css_i7orv714m6pljhnorf9o',}, 
+          { positions: [ { i: 5, j: 0 },  ], css_id: 'tinytable_css_20p1hu50eb5auoye1cug',}, 
+          { positions: [ { i: 2, j: 0 }, { i: 3, j: 0 }, { i: 4, j: 0 },  ], css_id: 'tinytable_css_sb2it9dn5m0jpoyv2bqx',}, 
+          { positions: [ { i: 0, j: 0 },  ], css_id: 'tinytable_css_v1w9o554ac9o392qbj5o',}, 
+          { positions: [ { i: 1, j: 0 },  ], css_id: 'tinytable_css_ew43x0ijum39jm0bzdb7',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_dbur7oh93zra02ty409h(cell.i, cell.j, group.css_id);
+                  styleCell_pm0wle6xhenreuie7jep(cell.i, cell.j, group.css_id);
               });
           });
       });
     </script><style>
       /* tinytable css entries after */
-      .table td.tinytable_css_ugb6e1ctyon1dtctlww8, .table th.tinytable_css_ugb6e1ctyon1dtctlww8 { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_ru5lkdnvpb6k0noriuyu, .table th.tinytable_css_ru5lkdnvpb6k0noriuyu { text-align: center; }
-      .table td.tinytable_css_6g8usgj7r9dcdugo7uhp, .table th.tinytable_css_6g8usgj7r9dcdugo7uhp { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_tkxqraiew9kv2h6lohub, .table th.tinytable_css_tkxqraiew9kv2h6lohub { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_sfmoj3nv37e140mxcrfa, .table th.tinytable_css_sfmoj3nv37e140mxcrfa { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_ytl18wvj5fnuev1fvyx2, .table th.tinytable_css_ytl18wvj5fnuev1fvyx2 { text-align: left; }
-      .table td.tinytable_css_kl6c6srvpph02nd9jiry, .table th.tinytable_css_kl6c6srvpph02nd9jiry { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_mjodf2dnl1k3v0ruk8kt, .table th.tinytable_css_mjodf2dnl1k3v0ruk8kt { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_xeqsavepxq1h0gpsg8ov, .table th.tinytable_css_xeqsavepxq1h0gpsg8ov { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_dzaym3y1t3plc0te4v55, .table th.tinytable_css_dzaym3y1t3plc0te4v55 { text-align: center; }
+      .table td.tinytable_css_rdmshs83zq1bvyr2702v, .table th.tinytable_css_rdmshs83zq1bvyr2702v { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_i7orv714m6pljhnorf9o, .table th.tinytable_css_i7orv714m6pljhnorf9o { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_20p1hu50eb5auoye1cug, .table th.tinytable_css_20p1hu50eb5auoye1cug { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_sb2it9dn5m0jpoyv2bqx, .table th.tinytable_css_sb2it9dn5m0jpoyv2bqx { text-align: left; }
+      .table td.tinytable_css_v1w9o554ac9o392qbj5o, .table th.tinytable_css_v1w9o554ac9o392qbj5o { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_ew43x0ijum39jm0bzdb7, .table th.tinytable_css_ew43x0ijum39jm0bzdb7 { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
 <div class="container">
-      <div class="inline-table"><table class="table table-borderless" id="tinytable_dbur7oh93zra02ty409h" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <div class="inline-table"><table class="table table-borderless" id="tinytable_pm0wle6xhenreuie7jep" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
 <thead>
 <tr>
 <th scope="col" align="center" colspan="1"> </th>
