--- a/assessment-template.html
+++ b/assessment-template.html
@@ -153,6 +153,27 @@
 <a href="files/Markdown/referencesPO33Q.bib">referencesPO33Q.bib</a> which contains all entries for the complete <a href="files/Downloads/PO33Q_Bibliography.pdf">bibliography</a> of the module.</li>
 </ul>
 <p>Render / knit this document without making any changes to ensure this works. It should look like <a href="files/Markdown/PO33Q-Assessment-Template.pdf">this</a>. Then you can start writing your assessment. Again, render/knit the document often, so that you can locate a potential mistake more easily should you receive an error message.</p>
+<div id="the-template-explained" class="section level2" number="0.1">
+<h2>
+<span class="header-section-number">0.1</span> The Template Explained<a class="anchor" aria-label="anchor" href="#the-template-explained"><i class="fas fa-link"></i></a>
+</h2>
+<p>There is quite a bit of formatting going on in the Rmd file, and this is what all of this code achieves:</p>
+<ul>
+<li>Light grey background to improve readability (a little present to myself for marking)</li>
+<li>Font size 12, one-half spacing</li>
+<li>Font: CMU sans serif for legibility</li>
+<li>Title page with module name, your registration number, submission date, and word count. No page number.</li>
+<li>Roman numerals for table of contents, list of figures, list of tables</li>
+<li>Table of contents, list of figures, and list of tables are automatic</li>
+<li>Arabic numbering from the start of text</li>
+<li>All captions are placed beneath figures and tables</li>
+<li>Fully adjustable size of <code>modelsummary</code> table (controlled via percentage of text width), so you can control the number of words the table “costs”</li>
+<li>Automatic page break if there are fewer than seven lines after a (sub-)section heading</li>
+<li>Automatic List of References</li>
+<li>Appendix after the List of References</li>
+<li>Code chunks are set by default not to show the code in the rendered file. Messages, warnings, and errors are suppressed</li>
+</ul>
+</div>
 <div id="assessment-submission" class="section level2 unnumbered">
 <h2>Assessment Submission<a class="anchor" aria-label="anchor" href="#assessment-submission"><i class="fas fa-link"></i></a>
 </h2>
@@ -188,6 +209,7 @@
     <nav id="toc" data-toggle="toc" aria-label="On this page"><h2>On this page</h2>
       <ul class="nav navbar-nav">
 <li><a class="nav-link" href="#assessment-template">Assessment Template</a></li>
+<li><a class="nav-link" href="#the-template-explained"><span class="header-section-number">0.1</span> The Template Explained</a></li>
 <li><a class="nav-link" href="#assessment-submission">Assessment Submission</a></li>
 </ul>
 
