--- a/assessment-template.html
+++ b/assessment-template.html
@@ -153,9 +153,8 @@
 <a href="files/Markdown/referencesPO33Q.bib">referencesPO33Q.bib</a> which contains all entries for the complete <a href="files/Downloads/PO33Q_Bibliography.pdf">bibliography</a> of the module.</li>
 </ul>
 <p>Render / knit this document without making any changes to ensure this works. It should look like <a href="files/Markdown/PO33Q-Assessment-Template.pdf">this</a>. Then you can start writing your assessment. Again, render/knit the document often, so that you can locate a potential mistake more easily should you receive an error message.</p>
-<div id="the-template-explained" class="section level2" number="0.1">
-<h2>
-<span class="header-section-number">0.1</span> The Template Explained<a class="anchor" aria-label="anchor" href="#the-template-explained"><i class="fas fa-link"></i></a>
+<div id="the-template-explained" class="section level2 unnumbered">
+<h2>The Template Explained<a class="anchor" aria-label="anchor" href="#the-template-explained"><i class="fas fa-link"></i></a>
 </h2>
 <p>There is quite a bit of formatting going on in the Rmd file, and this is what all of this code achieves:</p>
 <ul>
@@ -209,7 +208,7 @@
     <nav id="toc" data-toggle="toc" aria-label="On this page"><h2>On this page</h2>
       <ul class="nav navbar-nav">
 <li><a class="nav-link" href="#assessment-template">Assessment Template</a></li>
-<li><a class="nav-link" href="#the-template-explained"><span class="header-section-number">0.1</span> The Template Explained</a></li>
+<li><a class="nav-link" href="#the-template-explained">The Template Explained</a></li>
 <li><a class="nav-link" href="#assessment-submission">Assessment Submission</a></li>
 </ul>
 
