--- a/assessment-template.html
+++ b/assessment-template.html
@@ -162,9 +162,9 @@
 <li>Font size 12, one-half spacing</li>
 <li>Font: CMU sans serif for legibility</li>
 <li>Title page with module name, your registration number, submission date, and word count. No page number.</li>
-<li>Roman numerals for table of contents, list of figures, list of tables</li>
+<li>Page numbering in Roman numerals for table of contents, list of figures, and list of tables</li>
 <li>Table of contents, list of figures, and list of tables are automatic</li>
-<li>Arabic numbering from the start of text</li>
+<li>Page numbering in Arabic numerals from the start of the text</li>
 <li>All captions are placed beneath figures and tables</li>
 <li>Fully adjustable size of <code>modelsummary</code> table (controlled via percentage of text width), so you can control the number of words the table “costs”</li>
 <li>Automatic page break if there are fewer than seven lines after a (sub-)section heading</li>
