--- a/road-map-for-today-1.html
+++ b/road-map-for-today-1.html
@@ -195,7 +195,7 @@ Linear Regression - Theory &amp; Application
 <li>Describe and critique the propositions of modernisation theory</li>
 <li>Discuss the principles of statistical inference</li>
 <li>Understand and apply linear regression (Ordinary Least Squares)</li>
-<li>Appraise model fir in linear regression models</li>
+<li>Appraise model fit in linear regression models</li>
 </ul>
 </div>
 </div>
